[package]
name = "communicator"
version = "0.1.0"
edition = "2021"
description = "simple multi-party communication layer"
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "=2.0.0-rc.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
