[package]
name = "cuckoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
libm = "0.2.5"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "cuckoo"
harness = false

[[bench]]
name = "hash"
harness = false
