[package]
name = "dpf"
version = "0.1.0"
edition = "2021"
description = "single- and multi-point distributed point functions"
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
bincode = "2.0.0-rc.2"
num = "0.4.0"
rand = "0.8.5"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "spdpf"
harness = false

[[bench]]
name = "mpdpf"
harness = false
