[package]
name = "oram"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
communicator = { path = "../communicator" }
dpf = { path = "../dpf" }
utils = { path = "../utils" }
bincode = "2.0.0-rc.2"
bitvec = "1.0.1"
ff = "0.13.0"
funty = "2.0.0"
git-version = "0.3.5"
itertools = "0.10.5"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24"

[dev-dependencies]
clap = { version = "4.1.4", features = ["derive"] }
criterion = "0.4.0"
serde_json = "1.0"

[[bench]]
name = "doprf"
harness = false

[[bench]]
name = "p_ot"
harness = false
