[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
communicator = { path = "../communicator" }
bincode = "2.0.0-rc.2"
aes = "0.8.2"
blake3 = "1.3.3"
ff = { version = "0.13.0", features = ["derive"] }
num = "0.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rug = "1.19.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "field"
harness = false

[[bench]]
name = "permutation"
harness = false
